# bingo_generator

./: .flake8  README.md  pyproject.toml
.github/workflows/: coverage.yml  lint-os.yml  lint-python.yml  os-lint.yml  python-flake8.yml  python-package.yml  python-pytest.yml  test-os.yml  test-python.yml
bingogen/: bingodata.py  bingodoc.py
tests/: test_bingodata.py  test_bingodoc.py  utils.py
tests/data/: long_lines.txt  longer_input.txt
