[tool.poetry]
name = "bingogen"
version = "0.1.0"
description = "Generates randomised NxN bingo squares"
authors = ["Fergus Cooper <fcooper8472@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
