[tool.poetry]
name = "bingogen"
version = "0.1.0"
description = "Generate randomised NxN bingo squares"
authors = ["Fergus Cooper <fcooper8472@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^4.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
